--- a/08_events/three.html
+++ b/08_events/three.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Chai aur Javascript</h1>
     <button id="start">Start</button>
     <button id="stop">Stop</button>
-</body>
-<script>
-    const sayDate = function(str){
+
+    <script>
+      const sayDate = function (str) {
         console.log(str, Date.now());
-    }
+      };
 
-    const intervalId = setInterval(sayDate, 1000, "hi")
+      let intervalId = null;
 
-    clearInterval(intervalId)
-</script>
+      const start = function () {
+        if (!intervalId) {
+          intervalId = setInterval(sayDate, 1000, 'hi this is Shreya');
+        }
+      };
+
+      const stop = function () {
+        clearInterval(intervalId);
+        intervalId = null;
+      };
+
+      document.querySelector('#start').addEventListener('click', start);
+      document.querySelector('#stop').addEventListener('click', stop);
+    </script>
+  </body>
 </html>
